feat/작가가 신청한 펀딩+테스트 코드 단순화